# web_teletho_testapp

./: .gitignore  pyproject.toml
src/: bot.py  config.py
